# CppND-Capstone-Fractal-Generator

./: .gitignore  CMakeLists.txt  Makefile  README.md  predefined_fractals.txt
include/: julia.h  parameters.h  renderer.h
src/: julia.cpp  main.cpp  parameters.cpp  renderer.cpp
